# kddrescueview

./: .gitignore  CMakeLists.txt  README  README.md  TODO  kddrescueview.kdev4
icons/: CMakeLists.txt
prototype/: kddrescueview.py  requirements.txt  texture.py
src/part/: CMakeLists.txt  Messages.sh  block_delegate.cpp  block_delegate.h  block_position.cpp  block_position.h  block_size.cpp  block_size.h  block_status.cpp  block_status.h  blockwidget.cpp  blockwidget.h  kddrescueviewpart.cpp  kddrescueviewpart.desktop  kddrescueviewpart.h  kddrescueviewpartui.rc  rescue_map.cpp  rescue_map.h  rescue_map_view.cpp  rescue_map_view.h  rescue_map_widget.cpp  rescue_map_widget.h  rescue_operation.cpp  rescue_operation.h  rescue_status.cpp  rescue_status.h  rescue_totals.cpp  rescue_totals.h  rescuemap.cpp  rescuemap.h  rescuestatus.cpp  rescuestatus.h  square_color.cpp  square_color.h
src/shell/: CMakeLists.txt  Messages.sh  kddrescueview.desktop  kddrescueviewshell.cpp  kddrescueviewshell.h  kddrescueviewui.rc  main.cpp
tests/: Seagate1.mapfile
